--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           <div ng-controller="viewController as main" ng-repeat="n in _.range(5)">
       		{{main.message}}
           </div>
+          <p>
+            ----------------------------------
+          </p>
           <ng-view></ng-view>
 
           </article>
@@ -39,6 +42,7 @@
   <!-- Controllers -->
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/controllers/homeController.js"></script>
+    <script src="scripts/controllers/ex1Controller.js"></script>
   <!-- jQuery code -->
     <script>
     $(function(){
