added more examples

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="scripts/controllers/mainController.js"></script>
     <script src="scripts/controllers/homeController.js"></script>
     <script src="scripts/controllers/ex1Controller.js"></script>
+    <script src="scripts/controllers/ex2Controller.js"></script>
   <!-- jQuery code -->
     <script>
     $(function(){
