added form validation in example 3

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
       <div id="footer"></div>
 
   <!-- Necessary Library Scripts -->
-    <script src="assets/library/angular.min.js"></script>
     <script src="assets/library/jquery-3.2.1.min.js"></script>
+    <script src="assets/library/angular.min.js"></script>
 	  <script src="assets/library/angular-route.min.js"></script>
+    <script src="assets/library/angular-messages.min.js"></script>
     <script src="assets/library/lodash.js"></script>
     <script src="scripts/app.js"></script>
   <!-- Controllers -->
@@ -44,6 +45,7 @@
     <script src="scripts/controllers/homeController.js"></script>
     <script src="scripts/controllers/ex1Controller.js"></script>
     <script src="scripts/controllers/ex2Controller.js"></script>
+    <script src="scripts/controllers/ex3Controller.js"></script>
   <!-- jQuery code -->
     <script>
     $(function(){
