Added new example files

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="scripts/controllers/ex1Controller.js"></script>
     <script src="scripts/controllers/ex2Controller.js"></script>
     <script src="scripts/controllers/ex3Controller.js"></script>
+    <script src="scripts/controllers/ex4Controller.js"></script>
   <!-- jQuery code -->
     <script>
     $(function(){
